--- a/index.css
+++ b/index.css
@@ -4,5 +4,18 @@ html, body {
 }
 
 .test {
+    animation: a1 1s linear infinite;
     font-size: 378px;
+}
+
+@keyframes a1 {
+    0% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
 }
